--- a/DocumentoBootStrap3.html
+++ b/DocumentoBootStrap3.html
@@ -18,8 +18,8 @@
     
     <p>To indicate input that is typically enterede via the keyboard, use the kbd element:</p>
     <p>Use <kbd>ctrl + p</kbd> to open the Print dialog box.</p>
-<a href="/DocumentoBootStrap.html" target="_blank">Página 1</a>
-<a href="/DocumentoBootStrap2.html" target="_blank">Página 2</a>
+<a href="DocumentoBootStrap.html" target="_blank">Página 1</a>
+<a href="DocumentoBootStrap2.html" target="_blank">Página 2</a>
 
 </div>   
 
