--- a/HTMLBasico.html
+++ b/HTMLBasico.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Bootstrap 4 Example</title>
+    <title>Html Basics</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,24 +19,32 @@
         understanding of HTML and its functions teste .
     </p>
     
-    <h5>So what is HTML?</h5>
+    <h4>So what is HTML?</h4>
 
     <p>HTML is a markup language that defines the structure of your content. HTML consists of a series
-of elements, which you use to enclose, or wrap, different parts of the content to make it appear a
-certain way, or act a certain way. The enclosing tags can make a word or image hyperlink to
+of <u>elements</u>, which you use to enclose, or wrap, different parts of the content to make it appear a
+certain way, or act a certain way. The enclosing <u>tags</u> can make a word or image hyperlink to
 somewhere else, can italicize words, can make the font bigger or smaller, and so on. For
 example, take the following line of content:</p>
     
-<h5>My cat is very grumpy</h5>
+<h6>My cat is very grumpy</h6>
+
 <p>If we wanted the line to stand by itself, we could specify that it is a paragraph by enclosing it in
-    paragraph tags:
-<p>&lt;p>My cat is very grumpy /p>&gt;</p>
-</p>
+    paragraph tags:</p>
+
+    <pre>&lt;p&gt;My cat is very grumpy&lt;/p&gt;</pre>
+
+<h4>Anatomy of an HTML element</h4>
+
+<p>Let's explore this paragraph element a bit further.</p>
+<img src="Imagem_TAG.png" class="img-responsive" alt="Imagem responsiva" width="1200" \9>
+
+
 <!--- teste -->
     <p>To indicate input that is typically enterede via the keyboard, use the kbd element:</p>
     <p>Use <kbd>ctrl + p</kbd> to open the Print dialog box.</p>
-<a href="/DocumentoBootStrap.html" target="_blank">Página 1</a>
-<a href="/DocumentoBootStrap2.html" target="_blank">Página 2</a>
+<a href="DocumentoBootStrap.html" target="_blank">Página 1</a>
+<a href="DocumentoBootStrap2.html" target="_blank">Página 2</a>
 
 </div>   
 
