--- a/CloneLinkedin2.html
+++ b/CloneLinkedin2.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Clone do Perfil Twitter</title>
+    <title>Clone do Perfil Linkedin</title>
 </head>
 <body>
     <div class="container">
