nav bar collapsada

--- a/CloneLinkedin2.html
+++ b/CloneLinkedin2.html
@@ -14,12 +14,12 @@
     <div class="container">
     
         <div class="card" style="width:200px">
-            <img class="card-img-top" src="/img/logoLinkedin.png" alt="Linkedin" style="width:100%">
+            <img class="card-img-top" src="img/logoLinkedin.png" alt="Linkedin" style="width:100%">
           
         </div>
         <!-- <p>image at the top (card-img-top):</p> -->
         <div class="card" style="width:400px">
-            <img class="card-img-top" src="/img/perfilCezarinoLinkedin.jfif" alt="Cezarino" style="width:100%">
+            <img class="card-img-top" src="img/perfilCezarinoLinkedin.jfif" alt="Cezarino" style="width:100%">
             <div class="card-body">
                 <h4 class="card-title"> Cezarino Hora </h4>
                 <p class="card-text">Cezarino é Fiscal de Tributos na SEFAZ-MT e Estudante 
