--- a/DocumentoBootStrap.html
+++ b/DocumentoBootStrap.html
@@ -11,6 +11,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-md bg-dark text-white navbar-dark">
+    <a class="navbar-brand" hef="#">Navbar Colapsada</a>
+    <button class = "navbar-toggler" type="button" data-toggle="collapse"
+data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="nav-item">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+    </ul>    
+</div>
+</nav>
+
 <div class="container">
     <h1>Minha primeira página com o Boostrap</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam aut culpa nisi quos obcaecati, ipsum tempore expedita nesciunt, ea consectetur numquam similique iste blanditiis soluta quidem aliquam saepe natus et.</p>
