--- a/FormValidation.html
+++ b/FormValidation.html
@@ -44,6 +44,13 @@ data-target="#collapsibleNavbar">
             <div class="valid-feedback">Valid.</div>
             <div class="invalid-feedback">Por favor preencha este campo</div>
         </div>
+        <div class="form-group">
+            <label for="pwd">Password: </label>
+                <input type="password" class="form-control" id="pwd" placeholder="Entre com a senha" name="pswd" required>
+                <div class="valid-feedback">Valid.</div>
+                <div class="Invalid-feedback">Por favor preencha este campo.</div>
+            </label>
+        </div>
         <div class="form-group form-check">
             <label class="form-check-label">
                 <input class="form-check-input" type="checkbox" name="remember" required> Eu aceito bla bla bla!
