--- a/DocumentoBootStrap3.html
+++ b/DocumentoBootStrap3.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>Bootstrap 4 Example</title>
+    <title>Bootstrap 3 Example com Jquery</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+
+    
+    <script> 
+        $(document).ready(function() { $("button").click(function() {
+        $("#test").hide(); }); }); 
+    </script> 
+        <h2>This is a heading</h2>
+        <p>This is a paragraph.</p> 
+        <p id="test">This is another paragraph.</p>
+        <button>Click me to hide paragraphs</button>
+        
+
 </head>
 <body>
 <div class="container">
