--- a/DocumentoBootStrap3.html
+++ b/DocumentoBootStrap3.html
@@ -23,6 +23,18 @@
 
 </head>
 <body>
+
+    <div>
+        <script> 
+            $(document).ready(function() { 
+            $("p").click (function() {$(this).hide() }); }); 
+        </script> 
+            <p>If you click on me, i will disappear.</p>
+            <p>This is a paragraph.</p> 
+            <p>This is another paragraph.</p>
+    </div>
+
+
 <div class="container">
     <h1>code Snippets - Keyboard Inputs</h1>
     <p>Inline snippets of code should be embedded in the code element:</p>
