--- a/DocumentoBootStrap3.html
+++ b/DocumentoBootStrap3.html
@@ -25,14 +25,33 @@
 <body>
 
     <div>
-        <script> 
+        <!-- <script> 
             $(document).ready(function() { 
             $("p").click (function() {$(this).hide() }); }); 
         </script> 
             <p>If you click on me, i will disappear.</p>
             <p>This is a paragraph.</p> 
-            <p>This is another paragraph.</p>
+            <p>This is another paragraph.</p> -->
     </div>
+
+    <div>
+        <script> $(document).ready(function() { $("input").focus (function() {
+            $(this).css("background-color", "yellow"); }); $("input").blur(function() {
+            $(this).css("background-color", "green"); }); }); </script>
+            Name: <input type="text" name="fullname"><br> Email: <input type="text" name="email">
+    </div>
+
+
+    <div>
+        <script> $(document).ready(function() { $("p").dblclick (function() {
+            $(this).hide(); }); }); </script>
+            
+            <p>If you double-click on me, I will disappear.</p> 
+            <p>Click me away!</p> 
+            <p>click me too!</p>
+     </div>
+
+
 
 
 <div class="container">
