--- a/DocumentoBootStrap3.html
+++ b/DocumentoBootStrap3.html
@@ -70,7 +70,19 @@
             <p>click or move the mouse pointer over this paragraph.</p>
      </div>
 
-
+     <div>
+        <script> $(document).ready(function(){   
+            $("button").click(function(){ 
+                $("p").toggle();
+                
+            });
+        });
+        </script> 
+            <button>Toggle between hiding and showing the paragraphs.</button>
+            <p>If you click on me, i will disappear.</p>
+            <p>This is a paragraph.</p> 
+            <p>This is another paragraph.</p>
+     </div>
 
 <div class="container">
     <h1>code Snippets - Keyboard Inputs</h1>
